--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="bg-black bg-opacity-70 p-10 mb-5">
                     <p class="text-white leading-8 text-sm font-light">
                         Cuppa Joy is a cozy coffee shop that offers high-quality coffee drinks, fresh baked goods, and a welcoming atmosphere.
-                    	If you have any question, please <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">send us a message</a>. </p>
+                    	If you have any question, please <a rel="nofollow" href="#" target="_parent">send us a message</a>. </p>
                 </div>
                 <div class="text-center">
                     <div class="inline-block">
